Pruebas Karma/Jasmine

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:karma": "karma start",
+    "test:karma:single": "karma start --single-run",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,14 +41,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "jasmine-core": "^5.12.1",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-sourcemap-loader": "^0.4.0",
-    "karma-webpack": "^5.0.1"
+    "karma-webpack": "^5.0.1",
+    "style-loader": "^4.0.0"
   }
 }
